Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84042

Letter f gets cutoff at the top in software rendering after applying fix for QTBUG-80180

XMLWordPrintable

    • Windows
    • 5ce2d540be875041b38b481e3caef295071c79ee (qt/qtdeclarative/dev) 977c5158ae24a2d082adea624b23b1dfdd62eb79 (qt/qtdeclarative/5.15)

      We previously had issues with the last letter "e" being cutoff when at the end of a Text when running software renderer (reported as QTBUG-83439 which was duped to QTBUG-80180. We applied the fix which seemed to resolve the issue, but after internal testing users reported that now the letters "f" and "C" are being cuttoff at the top. 

      We compared the vanilla 5.14.1 build vs. our in-house-built 5.14.1 with the patch applied and noticed this new issue happens only in the latter case, with the patch applied.

      It only reproduces on certain font sizes, example:

      Text 

      {     text: "Something with the letter f in it"     font.family: "Segoe UI Semibold"     font.pixelSize: 14 }

      The monitor I'm repro-ing on is a Lenovo laptop 2560 x 1440, scale factor 150%, didn't seem to repro on an older 1920 x 1200 monitor.

      In our app we do manually set the QT_SCALE_FACTOR env var based on the monitor scale factor 

        1. Letter_O_cutoff.jpg
          7 kB
          Cosmin Pancratov
        2. LetterFCutoff.png
          9 kB
          Cosmin Pancratov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            cosminp Cosmin Pancratov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes